<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">


        <include
            android:id="@+id/include_image"
            layout="@layout/include_event_item_view">
        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"

            app:layout_constraintTop_toBottomOf="@id/include_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/event_headline_members"
                    android:textAppearance="@style/event_headline_style"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/event_headline_date_time"
                    android:textAppearance="@style/event_headline_style"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tv_date_and_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginStart="8dp"
                    android:text="@string/placeholder"
                    android:textAppearance="@style/event_data_text_style"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_headline_language"
                    android:textAppearance="@style/event_headline_style"
                    android:gravity="center_vertical"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_headline_place"
                    android:textAppearance="@style/event_headline_style"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:text="@string/placeholder"
                    android:textAppearance="@style/event_data_text_style"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <!--TODO:CHANGE IMAGEVIEW TO MAP-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"

                android:minHeight="178dp"
                app:cardCornerRadius="16dp"
                android:elevation="20dp">

                <com.leathersoft.parleo.ScrollableMapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/map_placeholder"
                     />
            </androidx.cardview.widget.CardView>



            <Button
                android:id="@+id/rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_drawable_blue"

                android:layout_marginBottom="8dp"

                android:padding="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/event_button_join"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"

                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
