<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">


        <TextView
            android:id="@+id/tv_photo_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/event_add_image"
            android:textAlignment="center"
            android:textColor="#80000000"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
            app:layout_constraintEnd_toEndOf="@+id/iv_photo"
            app:layout_constraintStart_toStartOf="@+id/iv_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_photo" />


        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="center"
            android:background="@drawable/iv_drawable_registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/event_photo_frame" />


        <!--TODO НА ТОН СВЕТЛЕЕ СДЕЛАТЬ ТЕКСТ ПОДСКАЗОК-->
        <EditText
            android:id="@+id/te_event_name"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/tv_drawable_registration"
            android:hint="@string/event_name"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"

            android:textAlignment="viewStart"
            android:textColor="#80000000"
            android:textColorHint="#80000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <EditText
            android:id="@+id/te_event_descriprion"
            android:layout_width="0dp"
            android:layout_height="107dp"
            android:layout_marginTop="24dp"

            android:background="@drawable/et_drawable_multiline"
            android:gravity="top"
            android:hint="@string/event_description"
            android:lines="5"
            android:inputType="textMultiLine"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"


            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"

            android:paddingTop="10dp"


            android:textAlignment="gravity"
            android:textColor="#80000000"
            android:textColorHint="#80000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/te_event_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/te_event_name"
            app:layout_constraintTop_toBottomOf="@+id/te_event_name" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="36dp"

            android:layout_marginBottom="36dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/te_event_descriprion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/te_event_descriprion"
            app:layout_constraintTop_toBottomOf="@+id/te_event_descriprion"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/add_location_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/event_add_location"
                    android:textAppearance="@style/create_event_button_text_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="center"

                    android:src="@drawable/ic_invite_friends" />

                <TextView
                    android:id="@+id/invite_friends_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/event_invite_friends"
                    android:textAppearance="@style/create_event_button_text_style" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="center"

                    android:src="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/set_time_date_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/event_set_time_date"
                    android:textAppearance="@style/create_event_button_text_style" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:scaleType="center"

                    android:src="@drawable/ic_language" />

                <TextView
                    android:id="@+id/add_languages_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/event_add_languages"
                    android:textAppearance="@style/create_event_button_text_style" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
